--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,11 +5,12 @@
 trigger:
 - main
 
-resources:
-- repo: self
+pool:
+    vmImage: 'ubuntu-latest'
 
 variables:
   tag: '$(Build.BuildId)'
+  buildConfiguration: 'Release'
 
 stages:
 - stage: Build
@@ -20,10 +21,24 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
-    - task: Docker@2
-      displayName: Build an image
+    - task: UseDotNet@2
+      displayName: 'Install .NET Core SDK'
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/CedricDemo-Deploy-AKS/Dockerfile'
-        tags: |
-          $(tag)
+        packageType: sdk
+        version: 6.x
+        performMultiLevelLookup: true
+        includePreviewVersions: true # Required for preview versions
+    - task: DotNetCoreCLI@2
+      displayName: Restore
+      inputs:
+        command: restore
+        projects: '**/*.csproj'
+        feedsToUse: config
+        nugetConfigPath: ./NuGet.config
+        
+    - task: DotNetCoreCLI@2
+      displayName: Build
+      inputs:
+        command: 'build'
+        projects: '**/*.csproj'
+        arguments: '--configuration $(buildConfiguration)'
