Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,7 +39,8 @@ stages:
         containerRegistry: 'AzureAcrService'
         repository: 'cedricdemodeployaks'
         command: 'buildAndPush'
-        Dockerfile: '*/Dockerfile'
+        Dockerfile: '**/Dockerfile'
+        
         tags: '$(tag)'
       
     - task: PublishPipelineArtifact@1
