--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,13 +34,11 @@ stages:
         arguments: '--configuration $(buildConfiguration)'
 
     - task: Docker@2
-      displayName: 'Docker Image build and Push'
       inputs:
         containerRegistry: 'AzureAcrService'
         repository: 'cedricdemodeployaks'
         command: 'buildAndPush'
-        Dockerfile: '$(Build.SourcesDirectory)/CedricDemo-Deploy-AKS/Dockerfile'  
-        tags: '$(tag)'
+        Dockerfile: '**/Dockerfile'
       
     - task: PublishPipelineArtifact@1
       inputs:
