--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,8 @@ stages:
         containerRegistry: 'AzureAcrService'
         repository: 'cedricdemodeployaks'
         command: 'buildAndPush'
-        Dockerfile: '$(Build.SourcesDirectory)/CedricDemo-Deploy-AKS/Dockerfile'
+        Dockerfile: 'CedricDemo-Deploy-AKS/Dockerfile'
+      
       
     - task: PublishPipelineArtifact@1
       inputs:
